Finished main content area for landing page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,28 @@
                 <div><a>header link two</a></div>
                 <div><a>header link three</a></div>
             </div>
-            <img src="img/placeholder.jpg" alt="Small alleyway with some plants surrounding stone buildings">
+            <img class="main-image" src="img/placeholder.jpg" alt="Small alleyway with some plants surrounding stone buildings">
+        </div>
+    </div>
+    <div class="content">
+        <h1>Some random information.</h1>
+        <div class="image-subtext">
+            <div class="flex-container">
+                <img class="small-img" src="img/placeholder.jpg" alt="Small alleyway with some plants surrounding stone buildings">
+                <p>this is some subtext under an image</p>
+            </div>
+            <div class="flex-container">
+                <img class="small-img" src="img/placeholder.jpg" alt="Small alleyway with some plants surrounding stone buildings">
+                <p>this is some subtext under an image</p>
+            </div>
+            <div class="flex-container">
+                <img class="small-img" src="img/placeholder.jpg" alt="Small alleyway with some plants surrounding stone buildings">
+                <p>this is some subtext under an image</p>
+            </div>
+            <div class="flex-container">
+                <img class="small-img" src="img/placeholder.jpg" alt="Small alleyway with some plants surrounding stone buildings">
+                <p>this is some subtext under an image</p>
+            </div>
         </div>
     </div>
 </body>
