--- a/index.html
+++ b/index.html
@@ -56,5 +56,16 @@
         </div>
         <div class="name">-Thor, God of Thunder</div>
     </div>
+    <div class="call-to-action">
+        <div class="call-container">
+            <div class="call-text-container">
+                <div class="text">Call to action! It's time!</div>
+                <div class="subtext">Sign up for our product by clicking that button
+                    right over there
+                </div>
+            </div>
+            <button class="sign-up">Sign up</button>
+        </div>
+    </div>
 </body>
 </html>
