--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <img class="main-image" src="img/placeholder.jpg" alt="Small alleyway with some plants surrounding stone buildings">
         </div>
     </div>
+
+
     <div class="content">
         <h1>Some random information.</h1>
         <div class="image-subtext">
@@ -48,6 +50,8 @@
             </div>
         </div>
     </div>
+
+
     <div class="quote-section">
         <div class="quote">
             This is an inspiring quote, or a testimonial from a customer. Maybe it's just
@@ -56,6 +60,8 @@
         </div>
         <div class="name">-Thor, God of Thunder</div>
     </div>
+
+
     <div class="call-to-action">
         <div class="call-container">
             <div class="call-text-container">
@@ -66,6 +72,11 @@
             </div>
             <button class="sign-up">Sign up</button>
         </div>
+    </div>
+
+
+    <div class="footer">
+        <p>Copyright &copy; The Odin Project 2021</p>
     </div>
 </body>
 </html>
